12/10/2024 - 19:19 atualiznado mensagens de erro
